Updated files before pulling latest changes